fixed bugs with scrollbar

--- a/frontend/blocks/comment/comment.less
+++ b/frontend/blocks/comment/comment.less
@@ -1,14 +1,9 @@
 .comment {
-
-
   position: relative;
   box-sizing: border-box;
 
-
   padding: @image-padding;
   border-bottom: solid @image-border-size #000;
-  border-right: solid @image-border-size #000;
-
 
   &__avatar {
     .avatar(42px);
